crates/scene/tests/snapshots/diagnostics__parse_use_opaque_field.snap
---
source: crates/scene/tests/diagnostics.rs
expression: render_errors(&errs)
---
scene/parse

  × scene file is not valid KDL: missing field `config_block` in type `UseNode`
   ╭─[parse_use_opaque_field.kdl:5:5]
 4 │ scene "ext" {
 5 │     use "status"
   ·     ──────┬─────
   ·           ╰── here
 6 │ }
   ╰────
  help: KDL 2.0 syntax error — see the caret below. Run `ark scene fmt` on a known-good reference to compare shapes.
